@@ -11,7 +11,8 @@
 		<format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
 		<identifier url="seahorse.xml"/>
 		<language code="C"/>
-		<relation seriesid="cf2bed6a-3e28-11d6-88f3-c2f7a14f1d6b"/>
+		<!--relation seriesid="cf2bed6a-3e28-11d6-88f3-c2f7a14f1d6b"/-->
+		<relation seriesid="03ed47bb-3836-8ee2-377e-77a1e590794b70"/>
 		<rights type="GNU FDL" license.version="1.1" license="http://www.gnu.org/licenses/fdl.html" holder="Jacob Perkins"/>
 	</resource>
 </omf>
