@@ -1,5 +1,7 @@
 2008-08-27  Adam Schreiber  <sadam@clemson.edu>
 
+    * help/seahorse.omf.in: Change series id so that the manual shows up
+    * help/C/seahorse.xml: Updated manual.
     * src/vala-build.stamp:
     * src/seahorse-key-manager.c:
     * src/seahorse-key-manager.vala: Don't repetedly load gnome-keyring items.
